# CICD_First

./: .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
.github/workflows/: CI.yml
app/: fix_me.py  old_style.py
tests/: test_example.py
