[project]
name = "cicd-first"
version = "0.1.0"
description = ""
authors = [
    {name = "Роман",email = "roman.v.antonnikov@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py313"
exclude = [
".venv",
"venv"
]
line-length = 80

[tool.ruff.lint]
select = [
"E", # pycodestyle errors
"W", # pycodestyle warnings
"F", # pyflakes
"I", # isort
"C90", # mccabe
"PL", # pylint
"N", #pep8-naming
"SIM", #flake8-simplify
"ARG"  # flake8-unused-arguments (неиспользуемые аргументы)
] # перечисление выбранных инструментов для проверки
ignore = ["W191"]  # игнорируем предупреждение о табуляциях

[tool.ruff.format]
quote-style = "double" # стиль кавычек
indent-style = "tab" # стиль отступов
docstring-code-format = true # форматировать код, содержащийся внутри документации
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"app/fix_me.py" = []
"app/old_style.py" = ["F401"]  # чтобы не удалять неиспользуемые импорты

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true # проверяем функции, у которых не указана аннотация типов
disallow_untyped_defs = true # запрещаем использование функций без указания аннотации типов
ignore_missing_imports = true # игнорируем ошибки отсутствия типизации в импортируемых библиотеках

[tool.bandit]
exclude_dirs = [".venv", "venv"]
